# stack-vm

./: .gitignore  Compiler.py  Opcodes.py  Parser.py  README.md  VM.py  byte_code.ss  main.py  procedures.py
c/: CMakeLists.txt  main.c  parser.h  re.h  test_code.s
